fix menu position and textearea scrollbar

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -110,6 +110,23 @@
       font-size: inherit;
 
       resize: none;
+
+      scrollbar-width: thin;
+      scrollbar-color: $darkBlueColor #ccc;
+
+      &::-webkit-scrollbar {
+        width: 4px;
+      }
+
+      &::-webkit-scrollbar-track {
+        background: #ccc;
+      }
+
+      &::-webkit-scrollbar-thumb {
+        background-color: $darkBlueColor;
+        border-radius: 10px;
+        border: none;
+      }
     }
   }
 
@@ -217,6 +234,7 @@
 
   &__logo {
     display: flex;
+    width: max-content;
     margin-bottom: 50px;
 
     @include onTablet {
