--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,15 +1,15 @@
 .menu {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   right: 0;
-  z-index: 1;
+  z-index: 2;
   transform: translateY(-110%);
 
   padding: 20px 0 50px;
 
-  background-color: #ababab;
-  box-shadow: 0 2px 10px #000000;
+  background-color: $greyColor;
+  box-shadow: 0 2px 10px #000;
 
   transition: transform $transitionDuration;
 
@@ -47,7 +47,7 @@
       width: 100%;
       height: 4px;
 
-      background-color: #000;
+      background-color: $darkGreyColor;
       border-radius: 2px;
     }
 
