--- a/src/styles/blocks/nav-link.scss
+++ b/src/styles/blocks/nav-link.scss
@@ -49,10 +49,10 @@
   }
 
   &--menu {
-    color: #000;
+    color: $darkGreyColor;
 
     &:hover::after {
-      background-color: #000;
+      background-color: $darkGreyColor;
     }
   }
 }
