--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -4,7 +4,7 @@
   scroll-behavior: smooth;
 
   &__body {
-    background-color: #f2f6fa;
+    background-color: $greyColor;
   }
 
   &__section {
